--- a/CoreSolution.DBContext/appsettings.json
+++ b/CoreSolution.DBContext/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "CoreSolutionDb": "Server=ANHDANHD;Database=eShop;Trusted_Connection=True;"
+    "CoreSolutionDb": "Server=ANHDANHD;Database=eShop;;User Id=sa; Password=123456;Trusted_Connection=True;"
   }
 }
