--- a/CoreSolution.DBContext/CoreSolution.DBContext.csproj
+++ b/CoreSolution.DBContext/CoreSolution.DBContext.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -7,11 +7,19 @@
   <ItemGroup>
     <Compile Remove="Migrations\20200305024005_eShop.cs" />
     <Compile Remove="Migrations\20200305024005_eShop.Designer.cs" />
+    <Compile Remove="Migrations\20200408081912_core_20200408.cs" />
+    <Compile Remove="Migrations\20200408081912_core_20200408.Designer.cs" />
+    <Compile Remove="Migrations\20200409071953_eShop_table_20200409.cs" />
+    <Compile Remove="Migrations\20200409071953_eShop_table_20200409.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.2">
       <PrivateAssets>all</PrivateAssets>
