--- a/CoreSolution.DBContext/CoreSolution.DBContext.csproj
+++ b/CoreSolution.DBContext/CoreSolution.DBContext.csproj
@@ -5,12 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Migrations\20200305024005_eShop.cs" />
-    <Compile Remove="Migrations\20200305024005_eShop.Designer.cs" />
-    <Compile Remove="Migrations\20200408081912_core_20200408.cs" />
-    <Compile Remove="Migrations\20200408081912_core_20200408.Designer.cs" />
-    <Compile Remove="Migrations\20200409071953_eShop_table_20200409.cs" />
-    <Compile Remove="Migrations\20200409071953_eShop_table_20200409.Designer.cs" />
+ 
   </ItemGroup>
 
   <ItemGroup>
@@ -30,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CoreSolution.Model\CoreSolution.Model.csproj" />
+    <ProjectReference Include="..\CoreSolution.Model\CoreSolution.Models.csproj" />
   </ItemGroup>
 
 </Project>
