--- a/CoreSolution.ViewModels/CoreSolution.ViewModels.csproj
+++ b/CoreSolution.ViewModels/CoreSolution.ViewModels.csproj
@@ -1,13 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="3.1.2" />
   </ItemGroup>
-
-
 
 </Project>
